# t210

./: .gitignore  GEMINI.md  LICENSE  OCS.System.md  README.md  TaskList.md  mkdocs.yml  pyproject.toml
.cursor/rules/: mcp.mdc
docs/: CHANGELOG.md  CONTRIBUTING.md  api.md  index.md  ui.md
docs/api/: client.md  exceptions.md  models.md
docs/architecture/: overview.md
docs/guides/: configuration.md  development.md  error_handling.md  examples.md
docs/spec/: klipper_sdk_architecture.kl  klipper_sdk_orchestration.kl  klipper_sdk_requirements.kl  (+1 more)
examples/: basic_usage.py  demo_ui.py  demo_v02.py  history.py  monitor.py
tasks/: 001_initiate_requirements.kl  002_design_architecture.kl  003_setup_dev_env.kl  004_implement_core_models.kl  005_implement_core_interfaces.kl  006_implement_client_implementation.kl  007_implement_exceptions.kl  008_verify_and_document.kl  009_document_sdk.kl  010_release_sdk.kl  011_detailed_implementation_planning.kl  012_implement_core_foundation.kl  013_implement_service_layer.kl  014_documentation_implementation.kl  015_verify_and_release_v020.kl  016_plan_v030_events.kl  017_implement_v030_events.kl  018_release_v030.kl  019_plan_v040_adapter.kl  020_implement_v040_adapter.kl  021_release_v040.kl  022_plan_v050_sqlite.kl  023_create_ui_ux_flows.kl  024_release_v050.kl  025_ui_ux_spec.kl  status.md
tests/: test_cli_components.py  test_client.py  test_domain_models.py  test_events.py  test_exceptions.py  test_interfaces.py  test_linux_adapter.py  test_models.py  test_sqlite_adapter.py
walkthroughs/: 025_walkthrough.md
(+39 files in other folders)
