[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klipper-sdk"
version = "0.1.0"
description = "A comprehensive SDK for the Klipper clipboard manager."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Klipper SDK Team", email = "dev@klipper.sdk"},
]
dependencies = [
  "fastapi",
  "httpx",
  "pydantic>=2.0.0",
  "rich",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
lint = [
  "ruff",
  "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/klipper_sdk"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
